# CME-465

./: main.py  pyproject.toml
Lab 2/: Lab 2 - Practical Exercises.ipynb  Lab 2.ipynb  cervical-cancer_cleaned_normalized.csv  kidney_disease_processed_pca.csv
Lab 2/.ipynb_checkpoints/: Lab 2 - Practical Exercises-checkpoint.ipynb  cervical-cancer_cleaned_normalized-checkpoint.csv  kidney_disease_processed_pca-checkpoint.csv
Lab 3/: CME_465_Lab_3_Heart_Failure_Death_Event.ipynb  Lab 3.ipynb
Lab 3/.ipynb_checkpoints/: CME_465_Lab_3_Heart_Failure_Death_Event-checkpoint.ipynb
Lab Exam/: CME465_LabExam.ipynb  alvan.ipynb
